--- a/src/Drugs_en_US.properties
+++ b/src/Drugs_en_US.properties
@@ -1,2 +1,19 @@
 drugs.list=List of drugs
 drugs.welcome=Hello! Welcome to see the list of available drugs.
+drugs.requirement=recipe require
+drugs.name=name
+drugs.dose=dose
+drugs.quantity=quantity
+drugs.price=price
+drugs.prescription=prescription
+drugs.amount=amount
+drugs.date=expiery date
+drugs.cart=add to cart
+drugs.no=No records found
+drugs.records1=Records: from
+drugs.records2=to
+drugs.records3=of
+drugs.records4=records per page
+drugs.delete=delete
+drugs.total=total
+drugs.buy=buy drugs
