--- a/src/Drugs_en_US.properties
+++ b/src/Drugs_en_US.properties
@@ -17,3 +17,5 @@ drugs.records4=records per page
 drugs.delete=delete
 drugs.total=total
 drugs.buy=buy drugs
+drugs.title=Drugs' bill
+drugs.caption=Bought drugs
