--- a/src/Drugs_en_US.properties
+++ b/src/Drugs_en_US.properties
@@ -9,7 +9,7 @@ drugs.prescription=prescription
 drugs.amount=amount
 drugs.date=expiery date
 drugs.cart=add to cart
-drugs.no=No records found
+drugs.absence=No records found
 drugs.records1=Records: from
 drugs.records2=to
 drugs.records3=of
@@ -19,3 +19,5 @@ drugs.total=total
 drugs.buy=buy drugs
 drugs.title=Drugs' bill
 drugs.caption=Bought drugs
+drugs.no=no
+drugs.yes=yes
