--- a/src/Drugs_en_US.properties
+++ b/src/Drugs_en_US.properties
@@ -1,6 +1,6 @@
 drugs.list=List of drugs
 drugs.welcome=Hello! Welcome to see the list of available drugs.
-drugs.requirement=recipe require
+drugs.requirement=recipe required
 drugs.name=name
 drugs.dose=dose
 drugs.quantity=quantity
@@ -21,3 +21,4 @@ drugs.title=Drugs' bill
 drugs.caption=Bought drugs
 drugs.no=no
 drugs.yes=yes
+drugs.create=create drug
