--- a/src/Drugs_en_US.properties
+++ b/src/Drugs_en_US.properties
@@ -5,7 +5,7 @@ drugs.name=name
 drugs.dose=dose
 drugs.quantity=quantity
 drugs.price=price
-drugs.prescription=prescription
+drugs.add=add
 drugs.amount=amount
 drugs.date=expiery date
 drugs.cart=add to cart
@@ -22,3 +22,4 @@ drugs.caption=Bought drugs
 drugs.no=no
 drugs.yes=yes
 drugs.create=create drug
+drugs.recipe=create recipe
