--- a/src/Drugs_en_US.properties
+++ b/src/Drugs_en_US.properties
@@ -6,6 +6,7 @@ drugs.dose=dose
 drugs.quantity=quantity
 drugs.price=price
 drugs.add=add
+drugs.prescription=prescription
 drugs.amount=amount
 drugs.date=expiery date
 drugs.cart=add to cart
