localization in drugs.run

--- a/src/Drugs_en_US.properties
+++ b/src/Drugs_en_US.properties
@@ -11,12 +11,12 @@ drugs.amount=amount
 drugs.date=expiery date
 drugs.cart=add to cart
 drugs.absence=No records found
-drugs.records1=Records: from
-drugs.records2=to
-drugs.records3=of
-drugs.records4=records per page
+drugs.items1=items from
+drugs.items2=to
+drugs.items3=of
+drugs.items4=items per page:
 drugs.delete=delete
-drugs.total=total
+drugs.total=Total:
 drugs.buy=buy drugs
 drugs.title=Drugs' bill
 drugs.caption=Bought drugs
@@ -24,3 +24,4 @@ drugs.no=no
 drugs.yes=yes
 drugs.create=create drug
 drugs.recipe=create recipe
+drugs.table=Shopping cart
